load angular test

--- a/css/load.css
+++ b/css/load.css
@@ -1,3 +1,6 @@
+#apollo{
+    top: 0; left: 0; position: fixed; width: 100%; height: 145px;background-color: #3399FF;padding: 10px;display: inline-table; z-index: 2147483500;box-sizing: border-box;font-weight:bold;
+}
 #display {
-    top: 0; left: 0; position: fixed; width: 100%; height: 45px; background-color: #3399FF;padding: 10px;display: inline-table; z-index: 2147483500;box-sizing: border-box;line-height: 28px;font-weight:bold
+    height: 45px; line-height: 28px;
 };
